1999-05-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/mips/mframe-irix6.h (refstructp): New inline.
	(mframe_get_struct_addr_ptr, MFRAME_ARG_ENCODING): Use it.
	(MFRAME_INIT_ARGS): Start CUM at 20.
	(MFRAME_ARG_ENCODING): Use offset of 4 when large struct reference,
	and CUM otherwise.  In latter case, add size to CUM.
	Retain register tags.

1999-05-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/mips/mframe-irix6.h (MFRAME_{G,S}ET_STRUCT_ADDR): 
	Use an offset of 1 into the argframe for struct return address.
	Note that this only occurs for structures larger than 16 bytes,
	(mframe_get_struct_addr_ptr): New static inline.
	(MFRAME_GET_STRUCT_ADDR, MFRAME_SET_STRUCT_ADDR): Use it.

	* config/mips/compiler-info-irix6.h, config/mips/mframe-irix6.h:
	Renamed from *irix6.5.h.

1999-05-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/unknown/compiler-info-generic.h,
	config/i386/compiler-info-linux-gnu.h,
	config/sparc/compiler-info-solaris2.h,
	config/hppa/compiler-info-generic.h:  Remove INVISIBLE_STRUCT_RETURN,
	it is redundant with mframe's MFRAME_STACK_STRUCT.

	* config/mips/compiler-info-irix6.5.h,
	config/mips/mframe-irix6.5.h: New files.

	* sendmsg.c: Use MFRAME_STACK_STRUCT from mframe.h instead of
	INVISIBLE_STRUCT_RETURN from compiler-info.h.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m: Declare alloca.

	* Object.m: Include string.h.

	* config/unknown/mframe-generic.h (MFRAME_ARG_ENCODING): Cast
	pointer difference to int to avoid warning (Irix 6.5).

	* mframe.m: Include sys/sigevent.h in case of HPUX.
	This is to avoid warning about implicit structure definition.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/unknown/mframe-generic.h (MFRAME_ARG_ENCODING): Cast argument
	to int to avoid warning.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m: Don't include mframe-preface.h.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>
